--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,210 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+/* CSS RESET - Alvin Varghese */
+/* https://github.com/alvin1904 */
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
+/* Preferred box-sizing value */
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
+html {
+  -ms-text-size-adjust: 100%; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 1 */
+  height: 100%;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* Remove default margin */
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+  /* transition: all ease-in-out 250ms; */
+}
+
+/* Reapply the pointer cursor for anchor tags */
+a,
+button {
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+  background-color: transparent;
+}
+
+/* Remove list styles (bullets/numbers) */
+ol,
+ul,
+menu {
+  list-style: none;
+}
+
+/* For images to not be able to exceed their container */
+img {
+  max-inline-size: 100%;
+  max-block-size: 100%;
+  border-style: none;
+}
+/* Make images easier to work with */
+img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
+}
+
+/* Safari - solving issue when using user-select:none on the <body> text input doesn't working */
+input,
+textarea {
+  -webkit-user-select: auto;
+  outline-color: transparent;
+  border: 0;
+}
+
+/* revert the 'white-space' property for textarea elements on Safari */
+textarea {
+  white-space: revert;
+}
+
+/* reset default text opacity of input placeholder */
+::placeholder {
+  color: unset;
+}
+
+/* remember to define focus styles! */
+:focus {
+  outline: 0;
+}
+
+/* fix the feature of 'hidden' attribute.
+   display:revert; revert to element instead of attribute */
+:where([hidden]) {
+  display: none;
+}
+
+:root {
+  --color-primary-400: #6570ff;
+  --color-ui-400: #262e47;
+  --color-ui-500: #262e47;
+  --color-ui-600: #1c213e;
+  --color-ui-800: #171c32;
+  --color-ui-shade: #5d6681;
+
+  font-family: "Raleway", sans-serif;
+}
+* {
+  font-family: "Raleway", sans-serif;
+}
+.App {
+  overflow: hidden;
+}
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
-
+.linear_gradient,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(90deg, #6570ff, #750fbd, #c949f8);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.hover_effect_1,
+.audio_btn {
+  color: #bfbfbf;
+  opacity: 1;
+  transition: 250ms ease-in-out;
+}
+.hover_effect_1:hover,
+.audio_btn:hover {
+  color: white;
+  opacity: 1;
+}
+.transition_1 {
+  transition: 250ms all ease-in-out;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+/* LOGIN AND REGISTER PAGES */
+
+.login {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.login_section {
+  background-color: var(--color-ui-500);
+  width: 28rem;
+  height: 62%;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  color: rgb(202, 202, 202);
+  padding: 4rem 1.2rem;
+  gap: 1rem;
+  border-radius: 7px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transform: translateY(-2rem);
+}
+.register_section {
+  height: 77%;
+}
+.login_section input,
+.login_btn {
+  all: unset;
+  background-color: var(--color-ui-800);
+  border-radius: 4px;
+  width: 18rem;
+  padding: 10px;
+  color: rgb(202, 202, 202);
+}
+.login_section input::placeholder {
+  opacity: 0.4;
+}
+.login_btn {
+  text-align: center;
+  cursor: pointer;
+  transition: 250ms ease-in-out;
+}
+.login_btn:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  color: white;
+}
+.login_section h1 {
+  font-weight: 600;
+  font-size: 2rem;
+}
+.login_form {
+  display: grid;
+  gap: 1rem;
+  width: 25rem;
+  justify-content: center;
+}
+.login_form p:hover,
+.alternative_signup p span:hover {
+  color: white;
+  cursor: pointer;
+}
+.forgotP {
+  padding: 2rem;
+  text-align: center;
+}
+.error {
+  color: red;
+  opacity: 0;
+  display: none;
+}
+.message {
+  opacity: 1;
+  display: block;
 }
