--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,7 @@ body {
   margin: 0;
   padding: 0;
   font: inherit;
+  color: white;
   /* transition: all ease-in-out 250ms; */
 }
 
@@ -489,4 +490,75 @@ body {
     object-fit: cover;
     height: 20%;
   }
+}
+
+/* DROP DOWN */
+/* ALVIN VARGHESE */
+/* https://gtihub.com/alvin1904 */
+.dropdown {
+  width: 250px;
+  /* width: ; */
+  position: relative;
+}
+.select {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-ui-500);
+  color: white;
+  border-radius: 0.5em;
+  padding: 1em;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.select-clicked {
+  box-shadow: 0 0 0.8 var(--color-ui-800);
+}
+.select:hover {
+  background-color: var(--color-ui-shade);
+}
+.caret {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 6px solid white;
+  transition: 0.3s;
+}
+.caret-rotate {
+  transform: rotate(180deg);
+}
+.menu {
+  list-style: none;
+  padding: 0.2em 0.5em;
+  background-color: var(--color-ui-600);
+  border: 1px var(--color-ui-800) solid;
+  box-shadow: 0 0 0.5em 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0.5em;
+  color: white;
+  position: absolute;
+  width: 100%;
+  margin-top: 0.5em;
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
+  opacity: 0;
+  display: none;
+  transition: 0.2s;
+  z-index: 1;
+}
+.menu li{
+  padding: 0.7em 0.5em;
+  margin: 0.3em 0;
+  border-radius: 0.5em;
+  cursor: pointer;
+}
+.menu li:hover{
+  background-color: var(--color-ui-shade);
+}
+.active{
+  background-color: var(--color-ui-shade);
+}
+.menu-open{
+  display: block;
+  opacity: 1;
 }
