--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,7 +87,7 @@ textarea {
 }
 
 /* fix the feature of 'hidden' attribute.
-   display:revert; revert to element instead of attribute */
+    display:revert; revert to element instead of attribute */
 :where([hidden]) {
   display: none;
 }
@@ -161,8 +161,8 @@ body {
 .register_section {
   height: 77%;
 }
-@media(max-width: 480px){
-  .login_section{
+@media (max-width: 480px) {
+  .login_section {
     height: 110vh;
     width: 100vw;
     text-align: center;
@@ -553,19 +553,130 @@ body {
   transition: 0.2s;
   z-index: 1;
 }
-.menu li{
+.menu li {
   padding: 0.7em 0.5em;
   margin: 0.3em 0;
   border-radius: 0.5em;
   cursor: pointer;
 }
-.menu li:hover{
+.menu li:hover {
   background-color: var(--color-ui-shade);
 }
-.active{
+.active {
   background-color: var(--color-ui-shade);
 }
-.menu-open{
+.menu-open {
   display: block;
   opacity: 1;
+}
+
+/* SETTINGS PAGE */
+.settings_page {
+  height: 90vh;
+  width: 80vw;
+  background-color: var(--color-ui-800);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 30px;
+  margin: auto;
+  color: white;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  justify-content: center;
+}
+.settings_top {
+  display: flex;
+  flex-direction: row;
+  gap: 4rem;
+  align-items: center;
+}
+.settings_profile_pic {
+  position: relative;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  user-select: none;
+}
+.settings_profile_pic img, .settings_profile_pic div {
+  position: absolute;
+  object-fit: cover;
+}
+.settings_profile_change{
+  bottom: 0%;
+  height: 40px;
+  width: 100%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: var(--color-ui-shade);
+  transition: 250ms all ease-in-out;
+  opacity: 0.5;
+}
+.settings_profile_change:hover{
+  opacity: 1;
+}
+.settings_profile_details textarea,
+.settings_profile_details input {
+  overflow: hidden;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  resize: none;
+  transition: 150ms all ease-in-out;
+}
+.sne {
+  background-color: var(--color-ui-500);
+  color: white;
+  caret-color: transparent;
+}
+.settings_edit {
+  background-color: var(--color-ui-shade);
+  color: white;
+  caret-color: white;
+}
+.settings_profile_details textarea::placeholder,
+.settings_profile_details input::placeholder {
+  opacity: 0.5;
+}
+.settings_profile_details textarea {
+  height: 150px;
+  width: 500px;
+}
+.settings_profile_pic div {
+  color: white;
+}
+.settings_rows,
+.settings_rows > div {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  gap: 10px;
+}
+.settings_rows svg {
+  transform: translateY(-20px);
+  transition: 250ms all ease-in-out;
+  opacity: 0.6;
+}
+.settings_rows svg:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.settings_btn {
+  background-color: var(--color-ui-500);
+  border: 0;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 5px;
+  transition: 250ms all ease-in-out;
+}
+.settings_btn:hover {
+  background-color: var(--color-ui-shade);
 }
